feat: search string with trie tree

--- a/Lotus/en.lproj/InfoPlist.strings
+++ b/Lotus/en.lproj/InfoPlist.strings
@@ -7,4 +7,4 @@
 */
 com.xuxihai.inputmethod.Lotus = "Lotus@kit";
 CFBundleName = "Lotus";
-CFBundleDisplayName = "Lotus@kit";
+CFBundleDisplayName = "Lotus@DiDi";
