--- a/Lotus/zh-Hans.lproj/InfoPlist.strings
+++ b/Lotus/zh-Hans.lproj/InfoPlist.strings
@@ -8,4 +8,4 @@
 
 com.xuxihai.inputmethod.Lotus = "青莲输入法";
 CFBundleName = "Lotus";
-CFBundleDisplayName = "青莲输入法";
+CFBundleDisplayName = "青莲DiDi";
